tests/ui/empty.rs

use vk_shader_macros::include_glsl;

#[allow(dead_code)]
const SPIR_V: &'static [u32] = include_glsl!();

fn main() {}
